# weather-app

./: LICENSE  Module1.html  Module1.py  pyproject.toml  readme.md  setup.cfg  setup.py
CS3270_Weather_Project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_dataset.py  test_loader.py  test_stats.py  test_ws_helper.py
weather_stats/: dataset.py  loader.py  stats.py  ws_helper.py
