[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CS3270-Weather-Project"
version = "0.1.0"
description = "A Python package for loading weather data and computing descriptive statistics"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name="Dylan Edwards", email="11096941@uvu.edu" }
]
dependencies = ["pandas"]
