[metadata]
name = CS3270_Weather_Project
version = 0.0.1
author = Dylan Edwards
author_email = 11096941@uvu.edu
description = A project part of CS3270 for handling weather data.
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas